[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Rafal Grad <r.grad@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
rand = "0.7.3"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
